Upgrade comic-web to Angular 19.2 with modern tooling and fixes
Major Upgrades:
- Angular: 18.2.13 → 19.2.0 (latest stable)
- Node.js: 20 → 22 LTS "Jod" (via Dockerfile and .nvmrc)
- TypeScript: 5.4.5 → 5.8.0 (full Angular 19.2 compatibility)
- zone.js: 0.14.10 → 0.15.0
- ESLint & Angular ESLint: Updated to v19 compatible versions

Code Quality Improvements:
- Fixed all 8 linting errors (component selector naming)
- Reduced test failures from 20 → 15 (fixed Jasmine spy API issues)
- Enabled TypeScript strict mode flags (strictNullChecks, strictFunctionTypes, etc.)
- Fixed all strict mode compilation errors

Configuration & Cleanup:
- Removed deprecated postinstall ngcc script (not needed in Angular 19)
- Removed deprecated buildOptimizer and vendorChunk options from angular.json
- Removed legacy app.module.ts (already using standalone components)
- Updated tsconfig.json to ES2022 with bundler resolution
- Excluded testing files from production builds
- Added .npmrc for public registry usage
- Added .nvmrc for nvm Node version management

Component Updates:
- Renamed selectors to follow Angular style guide (app- prefix)
- Added AfterViewInit interface implementation
- Fixed type safety issues (String → string, null handling)
- Updated all HTML templates with new selectors

Documentation:
- Updated README.md with Angular 19.2, Node 22, and TypeScript 5.8 info
- Created SECURITY.md documenting known vulnerabilities
- Added nvm usage instructions

Build Verification:
✅ Production build: 609KB / 134KB gzipped
✅ All linting checks pass
✅ 49 tests passing (improved from 44)
✅ TypeScript strict mode enabled with 0 errors

--- a/comic-web/package.json
+++ b/comic-web/package.json
@@ -14,39 +14,37 @@
     "buildDev": "ng build --configuration development",
     "buildWatch": "ng build --watch=true",
     "analyze": "ng build --stats-json && webpack-bundle-analyzer dist/comic-web/stats.json",
-    "prerender": "ng run comic-web:prerender",
-    "postinstall": "ngcc --properties es2020 browser module main"
+    "prerender": "ng run comic-web:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.13",
-    "@angular/cdk": "^18.2.14",
-    "@angular/cdk-experimental": "^18.2.14",
-    "@angular/common": "^18.2.13",
-    "@angular/compiler": "^18.2.13",
-    "@angular/compiler-cli": "^18.2.13",
-    "@angular/core": "^18.2.13",
-    "@angular/forms": "^18.2.13",
-    "@angular/material": "^18.2.14",
-    "@angular/platform-browser": "^18.2.13",
-    "@angular/platform-browser-dynamic": "^18.2.13",
-    "@angular/router": "^18.2.13",
+    "@angular/animations": "^19.2.0",
+    "@angular/cdk": "^19.2.0",
+    "@angular/cdk-experimental": "^19.2.0",
+    "@angular/common": "^19.2.0",
+    "@angular/compiler": "^19.2.0",
+    "@angular/compiler-cli": "^19.2.0",
+    "@angular/core": "^19.2.0",
+    "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.0",
+    "@angular/platform-browser": "^19.2.0",
+    "@angular/platform-browser-dynamic": "^19.2.0",
+    "@angular/router": "^19.2.0",
     "core-js": "^3.42.0",
     "rxjs": "^7.8.2",
     "tslib": "^2.8.1",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.19",
-    "@angular-eslint/builder": "^18.4.3",
-    "@angular-eslint/eslint-plugin": "^18.4.3",
-    "@angular-eslint/eslint-plugin-template": "^18.4.3",
-    "@angular-eslint/schematics": "^18.4.3",
-    "@angular-eslint/template-parser": "^18.4.3",
-    "@angular/cli": "^18.2.19",
-    "@angular/language-service": "^18.2.13",
+    "@angular-devkit/build-angular": "^19.2.0",
+    "@angular-eslint/builder": "^19.0.0",
+    "@angular-eslint/eslint-plugin": "^19.0.0",
+    "@angular-eslint/eslint-plugin-template": "^19.0.0",
+    "@angular-eslint/schematics": "^19.0.0",
+    "@angular-eslint/template-parser": "^19.0.0",
+    "@angular/cli": "^19.2.0",
+    "@angular/language-service": "^19.2.0",
     "@types/jasmine": "^5.1.8",
-    "@types/jasminewd2": "~2.0.10",
     "@types/node": "^22.15.17",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
@@ -59,7 +57,7 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
+    "typescript": "~5.8.0",
     "webpack-bundle-analyzer": "^4.10.2"
   },
   "packageManager": "yarn@3.2.1"
