--- a/comic-web/.eslintrc.json
+++ b/comic-web/.eslintrc.json
@@ -25,7 +25,7 @@
                   "error",
                   {
                       "type": "element",
-                      "prefix": "app",
+                      "prefix": ["app", "cdk"],
                       "style": "kebab-case"
                   }
               ],
